Fixed an error on background-checks #498 showing duplicated because it was related to several positions the user has; solved too a CSS bug, with buy-button overlapping large texts.

--- a/web/Styles/app/dashboard/about-you.styl
+++ b/web/Styles/app/dashboard/about-you.styl
@@ -159,11 +159,13 @@
                 margin-bottom: .5em;
             }
         
-            .buy-action {
-                position: absolute;
-                bottom: 0;
-                right: 0;
-                font-size: 1em;
+            .actions {
+                float: right;
+                margin-top: 1.5em;
+                
+                .buy-action {
+                    font-size: 1em;
+                }
             }
         }
         
